<resources>
    <string name="app_name">Minecraft Repository</string>

    <string name="error_message">An error has occurred</string>
    <string name="minecraft_items_path">items</string>
    <string name="navigate">Navigation Button</string>
    <string name="crafting">Image crafting Table</string>

    <string name="item_image">image Item Minecraft</string>

    <string name="minecraft_title">MINECRAFT</string>
    <string name="save_button">Save</string>
    <string name="load_button">Load</string>
    <string name="delete_button">Delete</string>

    <string name="search_items">Search…</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_image">Title Image</string>
</resources>

